Correct between-message lines and spacing in Mockie. Patch from '''jas8522'''. Fixes #8966

--- a/Resources/Message Styles/Mockie.AdiumMessageStyle/Contents/Resources/styles/basestyle.css
+++ b/Resources/Message Styles/Mockie.AdiumMessageStyle/Contents/Resources/styles/basestyle.css
@@ -51,7 +51,7 @@ a, a:link {
 	color: rgba(0,0,0,0.6);
 }
 
-.context .time_consecutive + p {
+.context .time_consecutive + div {
 	border-top: 1px solid rgba(0,0,0,0.2);
 }
 
