--- a/Resources/Message Styles/Mockie.AdiumMessageStyle/Contents/Resources/styles/colors_orange_green.css
+++ b/Resources/Message Styles/Mockie.AdiumMessageStyle/Contents/Resources/styles/colors_orange_green.css
@@ -31,7 +31,7 @@ body {
 	background: rgba(244,225,190,0.9);
 }
 
-.incoming .time_consecutive + p {
+.incoming .time_consecutive + div {
 	border-top: 1px solid rgba(255,124,0,0.4);
 }
 
@@ -66,7 +66,7 @@ body {
 	background: rgba(213,241,200,0.9);
 }
 
-.outgoing .time_consecutive + p {
+.outgoing .time_consecutive + div {
 	border-top: 1px solid rgba(102,204,50,0.4);
 }
 
